# headroom-hook

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEASIBILITY.md  NOTES.md  NOTICE  README.md  SECURITY.md  build.rs  config.example.yaml  docker-compose.yml
.github/workflows/: docker.yml  headroom-release-watch.yml  release.yml
bench/: README.md  busbar_ab.py  config.baseline.yaml  config.hook.yaml  corpus.py  docker_ab.py  floor.py  hook_bench.py  mock_upstream.py  providers.mock.yaml  report.py
bench/results/: RESULTS.md  ab_c1_d0.json  ab_c1_d200.json  busbar_ab.json  hook_direct.json
grafana/: README.md  headroom-dashboard.json
scripts/: docker-smoke.sh  smoke.sh
src/: compress.rs  main.rs
src/tests/: compress.rs  main.rs
