[package]
name = "headroom-hook"
version = "1.0.1"
edition = "2024"
publish = false
description = "busbar rewrite gate: compresses LLM chat history with headroom-core (BM25 TextCrusher) over busbar's Unix-socket hook wire"
license = "Apache-2.0"

[dependencies]
# Pinned to the rev evaluated in ../NOTES.md — headroom-core is 0.1.0, unpublished, and
# mid-rewrite (Python -> Rust port), so the API can churn under us. The pin protects builds;
# bumps are manual and re-run the full test suite.
headroom-core = { git = "https://github.com/headroomlabs-ai/headroom", rev = "c41cf444c74a9d190ab5922836122d0d10bc988c" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
